[gd_scene load_steps=3 format=3 uid="uid://bx6mg4qjs8ybc"]

[ext_resource type="Script" path="res://Scripts/Lifeless Scripts/LifelessSpawner.gd" id="1_ujjlo"]
[ext_resource type="Script" path="res://Scripts/Lifeless Scripts/LifelessViewerUI.gd" id="2_tqhiw"]

[node name="GameTest" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="LifelessSpawnerUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("2_tqhiw")

[node name="LifelessSpawner" type="Node" parent="UI/LifelessSpawnerUI"]
script = ExtResource("1_ujjlo")

[node name="Label" type="Label" parent="UI/LifelessSpawnerUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 16.0
offset_right = 320.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 30
text = "Select a Lifeless"
vertical_alignment = 1

[node name="LifelessSelect" type="OptionButton" parent="UI/LifelessSpawnerUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 320.0
offset_bottom = 128.0

[node name="Label2" type="Label" parent="UI/LifelessSpawnerUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 136.0
offset_right = 320.0
offset_bottom = 183.0
theme_override_font_sizes/font_size = 30
text = "Animation Select:"
vertical_alignment = 1

[node name="AnimationSelect" type="OptionButton" parent="UI/LifelessSpawnerUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 184.0
offset_right = 320.0
offset_bottom = 248.0

[node name="SpawnLifeless" type="Button" parent="UI/LifelessSpawnerUI"]
layout_mode = 0
offset_left = 992.0
offset_top = 624.0
offset_right = 1208.0
offset_bottom = 680.0
theme_override_font_sizes/font_size = 25
text = "Spawn Lifeless"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[connection signal="item_selected" from="UI/LifelessSpawnerUI/AnimationSelect" to="UI/LifelessSpawnerUI" method="_on_animation_select_item_selected"]
[connection signal="pressed" from="UI/LifelessSpawnerUI/SpawnLifeless" to="UI/LifelessSpawnerUI" method="_on_spawn_lifeless_pressed"]
